# tetris-from-bare-metal

./: CMakeLists.txt  LICENSE  README.md  main.c
include/: button.h  button_record.h  composite_shape.h  config.h  controller.h  event.h  game_controller.h  game_model.h  game_view.h  gfx_graphics.h  graphics.h  label.h  monitor.h  rect.h  shape.h  tetris_model.h  uart.h
include/common/: constants.h  errno.h  pair.h  stack.h  utils.h
include/controller/: game_controller.h
include/hardware/: button.h  event.h  monitor.h
include/model/: composite_shape.h  game_model.h  label.h  rect.h  shape.h  tetromino.h
include/view/: game_view.h  gfx_graphics.h  graphics.h
lib/pico-displayDrivs/gfx/: gfx.c
lib/pico-displayDrivs/ili9341/: ili9341.c
src/: button.c  button_record.c  composite_shape.c  controller.c  game_controller.c  game_model.c  game_view.c  gfx_graphics.c  label.c  main.c  monitor.c  rect.c  tetris_model.c  utils.c
src/common/: stack.c  utils.c
src/controller/: game_controller.c
src/hardware/: monitor.c
src/model/: game_model.c  label.c  rect.c  tetromino.c
src/view/: game_view.c  gfx_graphics.c
